--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -177,3 +177,22 @@
   ISBN = {1782162364},
 }
 
+@misc{QueryAPI82:online,
+author = {},
+title = {Query API — SQLAlchemy 1.2 Documentation},
+howpublished = {\url{http://docs.sqlalchemy.org/en/latest/orm/query.html}},
+month = {},
+year = {},
+note = {(Accessed on 02/08/2018)}
+}
+
+@article{moore1998cramming,
+  title={Cramming more components onto integrated circuits},
+  author={Moore, Gordon E},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={1},
+  pages={82--85},
+  year={1998},
+  publisher={IEEE}
+}
