--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -3,21 +3,21 @@
 
     
     Die im Jahre 1965 von Gordon Moore vorhergesagte Gesätzmäßigkeit, die Komplexität, und damit die Speicherdichte integrierter Schaltkreise, würde sich regelmäßig verdoppeln (vgl. \cite{moore1998cramming}),  hat sich seit dem bis zum heutigen Tag bewahrheitet. Damit sieht sich die Menschheit über 50 Jahre später in einer einmaligen Lage. 
-    Zum einen verfügen wir über eine noch nie dagewesene Ansammlung an Informationen, zum anderen wurden die Speichermedien, durch die wachsende Komplexität immer flüchtiger und schwieriger in der Handhabung. Werden kommende Zivilisationen in der Lage sein, diesen Pool an Informationen für sich zu nutzen oder sollten wir vielmehr annehmen, dass wir eine einmalige Chance haben, die wir nicht vergeuden sollten? \\
+    Zum einen verfügen wir über eine noch nie dagewesene Ansammlung an Informationen, zum anderen wurden die Speichermedien durch die wachsende Komplexität immer flüchtiger und schwieriger in der Handhabung. Werden kommende Zivilisationen in der Lage sein, diesen Pool an Informationen für sich zu nutzen oder sollten wir vielmehr annehmen, dass wir eine einmalige Chance haben, die wir nicht vergeuden sollten? \\
     
-    In diesem Kontext scheint es als folgerichtig, dass Bewegungen wie Freie Software, Creative-Commons und Open-Access die Hürden für den Zugang zu den Informationen noch weiter verringern.  Viele der Informationen stehen frei zur Verfügung und können genutzt werden und doch werden, von einem gefühlt immer größeren Anteil unseres Kulturkreises, Prinzipien der wissenschaftlichen Evidenz von einem abgelehnt. 
+    In diesem Kontext scheint es als folgerichtig, dass Bewegungen wie Freie Software, Creative-Commons und Open-Access die Hürden für den Zugang zu den Informationen noch weiter verringern.  Viele der Informationen stehen heute frei zur Verfügung und können genutzt werden und doch werden, von einem gefühlt immer größeren Anteil unseres Kulturkreises, Prinzipien der wissenschaftlichen Evidenz von einem abgelehnt. 
     In einer Zeit in der es einfacher den je ist, Fakten zu überprüfen, werden wissenschaftlich bewiesenen Aussagen wie dem Klimawandel einfach nicht geglaubt.
     Es scheint als wären viele Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.
     Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? 
     Über welche Mittel verfügt die Informatik, Daten in einen Kontext einzubetten? Wie muss der Kontext gestaltet sein, über die Menschen an  wissenschaftliche Arbeit herangeführt werden können? Welche Daten sind geeignet, um die Brisanz und das Potential unserer Zeit einem breiteren Publikum zuzuführen? 
     
-    Mit diesen Fragestellungen motiviert sich die hier vorliegende Arbeit. Im Rahmen dieser Abschlussarbeit wurde, über die Aggregation wissenschaftlicher Daten, ein exploratives Werkzeug geschaffen, um diese intuitiv erfahrbar zu gestalten. Dies geschieht mit der Hoffnung, hier eine Identifikation mit den Messwerten und des wissenschaftlichen Prozesses zu erreichen. Als Datengrundlage wurden die daten aus dem Argoprogramm verwendet. Unter dem Dach dieses Projektes, werden seit dem Beginn dieses Jahrtausends das Wasser der Weltmeere nach den Parametern Temperatur, Salzgehalt und Leitfähigkeit untersucht. Diese Daten stehen unter einer freien Lizenz zur Verfügung und können in eigene Projekte eingebunden werden.  Diese dienen Wissenschaftlern um die Auswirkungen des globalen Klimawandels zu untersuchen. Die Frage ist hier, ob es möglich scheint, diese hochkomplexen Messdaten insoweit aufzubereiten, dass diese intuitiv erfahrbar werden.
+    Mit diesen Fragestellungen motiviert sich die hier vorliegende Arbeit. Im Rahmen dieser Abschlussarbeit wurde, über die Aggregation wissenschaftlicher Daten, ein exploratives Werkzeug geschaffen, um diese intuitiv erfahrbar zu gestalten. Dies geschieht mit der Hoffnung, hier eine Identifikation mit den Messwerten und des wissenschaftlichen Prozesses zu erreichen. Als Grundlage wurden Daten des Argoprogramms verwendet. Unter dem Dach dieses Projektes werden seit dem Beginn dieses Jahrtausends das Wasser der Weltmeere nach den Parametern Temperatur, Salzgehalt und Leitfähigkeit untersucht. Diese Daten stehen unter einer freien Lizenz zur Verfügung und können in eigene Projekte eingebunden werden.  Die Messdaten dienen Wissenschaftlern, die Auswirkungen des globalen Klimawandels zu untersuchen. Die Herausforderung besteht darin, die  hochkomplexen Messdaten in einer Form aufzubereiten, so dass diese intuitiv erfahrbar werden.\\
     
     
     Ein solches Werkzeug könnte zum Beispiel in Schulklassen eingesetzt werden. 
-    Die Schüler könnten, durch eine Kontextvorgabe des Lehrenden, die Auswirkungen des Klimawandels auf die Weltmeere erfahren.
+    Die Lernenden könnten, innerhalb einer Kontextvorgabe durch den Lehrenden, die Auswirkungen des Klimawandels auf die Weltmeere untersuchen.
     Hier könnte auch das Interesse und ein eventueller Berufswunsch im Wissenschaftssektor geweckt werden.
-    Die Applikation richtet sich aber nicht explizit an Heranwachsende. Auch erwachsene Personen könnten sich, eigenes Interesse vorausgesetzt, weiterbilden. Die Applikation kann hier Relevanz der Forschung und die in diesem Programm erhobenen Messwerte erfahrbar machen. \\
+    Die Applikation richtet sich aber nicht explizit an Heranwachsende. Erwachsene Personen könnten sich hier, eigenes Interesse vorausgesetzt, weiterbilden. Die Applikation kann hier Relevanz der Forschung und die in diesem Programm erhobenen Messwerte erfahrbar machen. \\
     
     
     Der schriftliche Teil dieser Arbeit handelt von der Konzeption und Entwicklung eines Prototypen mit der oben genannten Problemstellung. Zu Beginn wird das Argo Programm näher vorgestellt. Es wird auf den Prozess der Datenerhebung und Aufbereitung eingegangen. Im Anschluss daran werden die Anforderungen der Software ausgearbeitet, um im Anschluss darauf gangbare Lösungsansätze und die geeignetsten Werkzeuge ermittelt.
