doc - grundlagen - impedance mismatch.

--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -196,3 +196,12 @@ note = {(Accessed on 02/08/2018)}
   year={1998},
   publisher={IEEE}
 }
+
+@inproceedings{ireland2009classification,
+  title={A classification of object-relational impedance mismatch},
+  author={Ireland, Christopher and Bowers, David and Newton, Michael and Waugh, Kevin},
+  booktitle={Advances in Databases, Knowledge, and Data Applications, 2009. DBKDA'09. First International Conference on},
+  pages={36--43},
+  year={2009},
+  organization={IEEE}
+}
